if (WIN32)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
endif()

add_subdirectory(frame_tests)
add_subdirectory(lexer_tests)
add_subdirectory(parser_tests)
add_subdirectory(codegen_tests)
add_subdirectory(gpu_tests)
add_subdirectory(skinning_tests)